# ChatGenius-New

./: .env.example  .gitignore  .replit  README.md  amplify.yml  chat.db  chat.db-shm  chat.db-wal  drizzle.config.ts  erver  et --hard e310f63  netlify.toml  package-lock.json  package.json  pyproject.toml  replit.nix  tailwind.config.js  tailwind.config.ts  theme.json  upload.py  vite.config.ts
.cache/nix/: binary-cache-v6.sqlite
.data/: chat.db-shm  chat.db-wal
.upm/: store.json
ChatGenius-New-e5d1c8920a62b76222df4865215e766034bb6e54/: .gitignore  drizzle.config.ts  package-lock.json  replit_zip_error_log.txt  tailwind.config.js  tailwind.config.ts
ChatGenius-New-e5d1c8920a62b76222df4865215e766034bb6e54/client/: theme.json
ChatGenius-New-e5d1c8920a62b76222df4865215e766034bb6e54/server/: ai.ts  auth.ts  documentProcessor.ts  index.ts
ChatGenius-New-e5d1c8920a62b76222df4865215e766034bb6e54/types/: langchain.d.ts
attached_assets/: main.py  upload.py
client/: tailwind.config.js  theme.json  vite.config.ts
client/src/: App.tsx  index.css
db/: index.ts  init.ts  migrate.ts  schema.ts  seed.ts
deploy/: .ebignore  amplify.yml
deploy/.ebextensions/: nodecommand.config
deploy/client/: tailwind.config.js  vite.config.ts
deploy/scripts/: prepare-deploy.ps1
deploy/server/: index.ts  routes.ts
migrations/: 0000_initial.sql
scripts/: build-aws.sh
server/: ai.ts  auth.ts  documentProcessor.ts  index.ts  rag.ts  routes.ts  schema.ts
server/.data/: chat.db-shm  chat.db-wal
server/lib/: schema.sql  supabase.ts
training_data/: knowledge.txt
(+67 files in other folders)
